plugins {
    id 'com.android.application'
    id 'org.jetbrains.kotlin.android'
    id 'org.jetbrains.kotlin.kapt'
    id 'dagger.hilt.android.plugin'
    id "com.google.gms.google-services"
    id 'kotlin-kapt' // Ensure this line is present
    id 'com.google.dagger.hilt.android'

}

android {
    namespace 'com.example.calendario'
    compileSdk 34


    defaultConfig {
        applicationId "com.example.calendario"
        minSdk 24
        targetSdk 34
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }

    kotlinOptions {
        jvmTarget = '17'
    }

    buildFeatures {
        compose true
    }

    composeOptions {
        kotlinCompilerExtensionVersion '1.5.8'
    }

    kapt {
        correctErrorTypes = true
        javacOptions {
            option("-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED")
        }
    }
}

dependencies {
    implementation "androidx.core:core-ktx:1.13.1"
    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.8.6"
    implementation "com.kizitonwose.calendar:compose:2.4.0"

    def room_version = "2.8.3" // Or use the version from libs.versions.toml
    implementation "androidx.room:room-runtime:$room_version"
    kapt "androidx.room:room-compiler:$room_version"
    implementation "androidx.room:room-ktx:$room_version"
    // Hilt Navigation Compose
    implementation "androidx.hilt:hilt-navigation-compose:1.2.0"

    implementation platform("com.google.firebase:firebase-bom:33.3.0")
    implementation "com.google.firebase:firebase-firestore-ktx"
    implementation "com.google.firebase:firebase-analytics-ktx"

    // Jetpack Compose BOM
    implementation platform('androidx.compose:compose-bom:2024.06.00')
    implementation "androidx.compose.ui:ui"
    implementation "androidx.compose.material3:material3"
    implementation "androidx.navigation:navigation-compose:2.7.7"

    // Hilt
    implementation "com.google.dagger:hilt-android:2.50"
    kapt "com.google.dagger:hilt-compiler:2.50"
    implementation "com.google.dagger:hilt-android:2.51.1"
    kapt "com.google.dagger:hilt-compiler:2.51.1"

    // SQLite Room
    implementation "androidx.room:room-ktx:2.6.1"
    kapt "androidx.room:room-compiler:2.6.1"

    // Firebase
    implementation platform("com.google.firebase:firebase-bom:33.1.0")
    implementation "com.google.firebase:firebase-firestore-ktx"
    implementation "com.google.firebase:firebase-analytics-ktx"

    // Testing
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
    androidTestImplementation platform('androidx.compose:compose-bom:2024.06.00')
    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
    debugImplementation 'androidx.compose.ui:ui-tooling'
    debugImplementation 'androidx.compose.ui:ui-test-manifest'
}
